# DeepEval_101

./: .gitignore  README.md  deep_eval.ipynb  main.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
