[project]
name = "deep-eval-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "deepeval>=3.6.7",
    "ipykernel>=7.0.1",
    "langchain-google-genai>=2.1.12",
    "matplotlib>=3.10.7",
    "python-dotenv>=1.1.1",
]
